# png2ico

./: LICENSE  README.md  README.rst  pyproject.toml
src/png2ico/: __main__.py  app.py
src/png2ico.dist-info/: METADATA
